[package]
name = "wecom-rs"
version = "0.1.15"
edition = "2021"
description = "企业微信Rust版SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shenshouer/wecom-rs"
keywords = ["wecom"]

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1.56"
aes = "0.8.1"
sha1 = "0.10.1"
base64 = "0.13.0"
rand = "0.8.5"

[dev-dependencies]
anyhow = "1.0.57"
dotenv = "0.15.0"
tracing-subscriber = "0.3.12"
quick-xml = { version = "0.24", features = [ "serialize" ] }